Added new reservation and login components